# telegram-uptime-monitor

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  render.yaml  test_email.py
alembic/: env.py
alembic/versions/: 022a54f628db_add_notification_settings.py  61c2df339bc7_add_email_verification_fields.py  a76a9e0f991c_add_pro_features.py  c4d72f6e4d5a_add_email_features.py  d5a6b7c8d9e0_add_email_limit.py  ee17bd5d5c85_initial_migration.py
app/: app.py  config.py  models.py  security.py
app/bot/: admin_handlers.py  handlers.py  keyboards.py  loader.py  main.py
app/database/: connection.py  init_db.py
app/routers/: checks.py  monitors.py  users.py
app/schemas/: checks.py  monitor.py  user.py
app/services/: email_service.py  monitor_service.py  notification_service.py  scheduler.py  stats_service.py
