[project]
name = "telegram-uptime-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.1",
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "psycopg2>=2.9.11",
    "psycopg[binary]>=3.3.2",
    "pytelegrambotapi>=4.30.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
    "httpx>=0.27.0",
    "aiohttp>=3.13.3",
]
